    and git annex dropunused.
  * Clear up short option confusion between --from and --force (-f is now
    --from, and there is no short option for --force).
  * Add build depend on perlmagick so docs are consistently built.
    Closes: #621410
  * Add doc-base file. Closes: #621408
  * Periodically flush git command queue, to avoid boating memory usage
    too much.
  * Support "sha1" and "sha512" commands on FreeBSD. Thanks, Fraser Tweedale

 -- Joey Hess <joeyh@debian.org>  Sat, 02 Apr 2011 13:45:54 -0400

git-annex (0.20110401) experimental; urgency=low

  * Amazon S3 is now supported as a special type of remote.
    Warning: Encrypting data before sending it to S3 is not yet supported.
  * Note that Amazon S3 support is not built in by default on Debian yet,
    as hS3 is not packaged.
  * fsck: Ensure that files and directories in .git/annex/objects
    have proper permissions.
  * Added a special type of remote called a directory remote, which
    simply stores files in an arbitrary local directory.
  * Bugfix: copy --to --fast never really copied, fixed.

 -- Joey Hess <joeyh@debian.org>  Fri, 01 Apr 2011 21:27:22 -0400

git-annex (0.20110328) experimental; urgency=low

  * annex.diskreserve can be given in arbitrary units (ie "0.5 gigabytes")
  * Generalized remotes handling, laying groundwork for remotes that are
    not regular git remotes. (Think Amazon S3.)
  * Provide a less expensive version of `git annex copy --to`, enabled
    via --fast. This assumes that location tracking information is correct,
    rather than contacting the remote for every file.
  * Bugfix: Keys could be received into v1 annexes from v2 annexes, via
    v1 git-annex-shell. This results in some oddly named keys in the v1
    annex. Recognise and fix those keys when upgrading, instead of crashing.

 -- Joey Hess <joeyh@debian.org>  Mon, 28 Mar 2011 10:47:29 -0400

git-annex (0.20110325) experimental; urgency=low
