@@ -14,7 +14,8 @@ git-annex (0.20110402) UNRELEASED; urgency=low
   * Add doc-base file. Closes: #621408
   * Periodically flush git command queue, to avoid boating memory usage
     too much.
-  * Support "sha1" and "sha512" commands on FreeBSD. Thanks, Fraser Tweedale
+  * Support "sha1" and "sha512" commands on FreeBSD, and allow building
+    if any/all SHA commands are not available. Thanks, Fraser Tweedale
 
  -- Joey Hess <joeyh@debian.org>  Sat, 02 Apr 2011 13:45:54 -0400
 
